<resources>
    <string name="app_name">食安保證</string>

    <string name="title_information">食安資訊</string>
    <string name="title_news">食安新知</string>
    <string name="title_topic">安食樂驗</string>
    <string name="title_video_area">影音專區</string>
    <string name="title_farmer">在地小農</string>

    <string name="common_zero_result">無符合的商品搜尋結果</string>

    <string name="search_bar_title">食安資訊</string>
    <string name="search_bar_cancel">取消</string>
    <string name="search_bar_input_hint">請輸入商品名稱</string>
    <string name="search_result_count">共有%s筆符合的商品搜尋結果</string>

    <string name="product_detail_title">食安資訊</string>
    <string name="product_detail_information_title">產品資訊</string>
    <string name="product_detail_report_title">檢驗報告</string>
    <string name="product_detail_link"><![CDATA[PDF檔案連結下載 >]]></string>
    <string name="product_detail_checkDate">送樣/檢驗日期&#160;:&#160;</string>
    <string name="product_detail_category">檢驗標的&#160;:&#160;</string>
    <string name="product_detail_checkItems">檢驗項目&#160;:&#160;</string>

    <string name="guide_disclaimer">免責條款</string>
</resources>
